--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "en-core-web-lg",
     "fastapi>=0.128.0",
     "genai>=1.0.3",
+    "go-task-bin>=3.48.0",
     "google-genai>=1.60.0",
     "httpx>=0.28.1",
     "jamdict>=0.1a11.post2",
