--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "dotenv>=0.9.9",
     "en-core-web-lg",
     "fastapi>=0.128.0",
+    "firebase-admin>=6.0.0",
     "genai>=1.0.3",
     "go-task-bin>=3.48.0",
     "google-genai>=1.60.0",
