--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,5 +52,14 @@ select = ["E", "F", "I"]
 # 無視するルール (E501: line too long - prompts can be long)
 ignore = ["E501"]
 
+[tool.pyright]
+venvPath = "."
+venv = ".venv"
+pythonVersion = "3.12"
+
+[tool.ty.environment]
+python = ".venv"
+root = [".", "./src"]
+
 [tool.uv.sources]
 en-core-web-lg = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl" }
