--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "firebase-admin>=6.0.0",
     "genai>=1.0.3",
     "go-task-bin>=3.48.0",
+    "google-cloud-storage>=3.8.0",
     "google-genai>=1.60.0",
     "httpx>=0.28.1",
     "jamdict>=0.1a11.post2",
@@ -22,6 +23,7 @@ dependencies = [
     "jinja2>=3.1.6",
     "pdfplumber>=0.11.9",
     "pip>=25.3",
+    "psycopg2-binary>=2.9.11",
     "pydantic>=2.12.5",
     "pymupdf>=1.26.7",
     "python-json-logger>=4.0.0",
