--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,10 +13,12 @@ dependencies = [
     "en-core-web-lg",
     "fastapi>=0.128.0",
     "firebase-admin>=6.0.0",
+    "gcloud>=0.18.3",
     "genai>=1.0.3",
     "go-task-bin>=3.48.0",
     "google-cloud-storage>=3.8.0",
     "google-genai>=1.60.0",
+    "gsutil>=5.27",
     "httpx>=0.28.1",
     "jamdict>=0.1a11.post2",
     "jamdict-data>=1.5",
