--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "gcloud>=0.18.3",
     "genai>=1.0.3",
     "go-task-bin>=3.48.0",
+    "google-cloud-aiplatform>=1.135.0",
     "google-cloud-storage>=3.8.0",
     "google-genai>=1.60.0",
     "gsutil>=5.27",
