--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,5 +25,9 @@
     "typescript": "^5.2.2",
     "vite": "^5.3.1"
   },
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "@types/uuid": "^11.0.0",
+    "uuid": "^13.0.0"
+  }
 }
