feat: Persist and retrieve PDF page layout data by adding a `layout_json` field to paper storage and including a frontend build task.

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -21,3 +21,8 @@ tasks:
     desc: "Run local server"
     cmds:
       - uv run uvicorn src.main:app --reload
+
+  build:
+    desc: "Build frontend"
+    cmds:
+      - cd frontend && npm run dev
