feat: Implement FastAPI lifespan event for database initialization and add a debug endpoint, alongside a new `gcloud run logs` task and `deploy.sh` gitignore entry.

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -26,3 +26,8 @@ tasks:
     desc: "Build frontend"
     cmds:
       - cd frontend && npm run dev
+
+  log:
+    desc: "Run local server"
+    cmds:
+      - gcloud run services logs read paperterrace
