--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "beautifulsoup4>=4.14.3",
     "chardet>=5.2.0",
+    "ctranslate2>=4.6.3",
     "datetime>=6.0",
     "dotenv>=0.9.9",
     "email-validator>=2.3.0",
@@ -21,8 +22,7 @@ dependencies = [
     "google-genai>=1.60.0",
     "gsutil>=5.27",
     "httpx>=0.28.1",
-    "jamdict>=0.1a11.post2",
-    "jamdict-data>=1.5",
+    "huggingface-hub>=1.3.5",
     "jinja2>=3.1.6",
     "pdfplumber>=0.11.9",
     "pip>=25.3",
