--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ dependencies = [
     "python-json-logger>=4.0.0",
     "python-multipart>=0.0.21",
     "redis>=7.1.0",
+    "sentencepiece>=0.2.1",
     "spacy>=3.8.11",
     "tiktoken>=0.12.0",
     "uuid6>=2025.0.1",
@@ -47,6 +48,8 @@ dev = [
     "pytest-asyncio>=0.23.0",
     "httpx>=0.28.0",
     "pylance>=1.0.4",
+    "torch>=2.10.0",
+    "transformers>=5.0.0",
 ]
 
 [tool.ruff]
