minor modify for jamdict

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ dependencies = [
     "google-genai>=1.60.0",
     "gsutil>=5.27",
     "httpx>=0.28.1",
+    "jamdict>=0.1a11.post2",
+    "jamdict-data>=1.5",
     "huggingface-hub>=1.3.5",
     "jinja2>=3.1.6",
     "pdfplumber>=0.11.9",
