--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ dependencies = [
     "datetime>=6.0",
     "dotenv>=0.9.9",
     "email-validator>=2.3.0",
-    "en-core-web-lg",
+    "en-core-web-sm",
     "fastapi>=0.128.0",
     "firebase-admin>=6.0.0",
     "gcloud>=0.18.3",
@@ -74,4 +74,4 @@ python = ".venv"
 root = [".", "./src"]
 
 [tool.uv.sources]
-en-core-web-lg = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl" }
+en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
