feat: Implement dictionary card UI with word highlighting and jump-to-word functionality via HTMX.

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -96,3 +96,8 @@ tasks:
      - db:start
      - db:wait
      - deploy
+
+  ruff:
+    desc: "Run ruff"
+    cmds:
+      - uv run ruff check --fix .
