--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ dependencies = [
     "psycopg2-binary>=2.9.11",
     "pydantic>=2.12.5",
     "pymupdf>=1.26.7",
-    "python-json-logger>=4.0.0",
+    "structlog>=24.1.0",
     "python-multipart>=0.0.21",
     "redis>=7.1.0",
     "sentencepiece>=0.2.1",
