--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,15 +22,12 @@ dependencies = [
     "google-genai>=1.60.0",
     "gsutil>=5.27",
     "httpx>=0.28.1",
-    "jamdict>=0.1a11.post2",
-    "jamdict-data>=1.5",
     "huggingface-hub>=1.3.5",
     "jinja2>=3.1.6",
     "pdfplumber>=0.11.9",
     "pip>=25.3",
     "psycopg2-binary>=2.9.11",
     "pydantic>=2.12.5",
-    "pymupdf>=1.26.7",
     "structlog>=24.1.0",
     "python-multipart>=0.0.21",
     "redis>=7.1.0",
@@ -39,6 +36,8 @@ dependencies = [
     "tiktoken>=0.12.0",
     "uuid6>=2025.0.1",
     "uvicorn>=0.40.0",
+    "pypdf>=6.6.2",
+    "Pillow>=11.1.0",
 ]
 
 [dependency-groups]
@@ -52,6 +51,7 @@ dev = [
     "pylance>=1.0.4",
     "torch>=2.10.0",
     "transformers>=5.0.0",
+    "git-filter-repo>=2.47.0",
 ]
 
 [tool.ruff]
