--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,11 @@ test/
 assets/
 # db
 *.db
+logs/
+*.png
+*.jpg
+.deb
+screenshots/
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
