--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,7 +38,7 @@ dependencies = [
     "uvicorn>=0.40.0",
     "pypdf>=6.6.2",
     "Pillow>=11.1.0",
-    "layoutparser>=0.3.4",
+    "layoutparser[paddledetection]>=0.2.0",
 ]
 
 [dependency-groups]
