--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "furigana"
+name = "paperterrace"
 version = "0.1.0"
-description = "Add your description here"
+description = "Research paper analysis and furigana tool"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
@@ -14,13 +14,11 @@ dependencies = [
     "en-core-web-sm",
     "fastapi>=0.128.0",
     "firebase-admin>=6.0.0",
-    "gcloud>=0.18.3",
     "genai>=1.0.3",
     "go-task-bin>=3.48.0",
     "google-cloud-aiplatform>=1.135.0",
     "google-cloud-storage>=3.8.0",
     "google-genai>=1.60.0",
-    "gsutil>=5.27",
     "httpx>=0.28.1",
     "huggingface-hub>=1.3.5",
     "jinja2>=3.1.6",
@@ -38,7 +36,9 @@ dependencies = [
     "uvicorn>=0.40.0",
     "pypdf>=6.6.2",
     "Pillow>=11.1.0",
-    "layoutparser[paddledetection]>=0.2.0",
+    "layoutparser[paddle]>=0.3.4",
+    "paddlepaddle>=2.6.0",
+    "opencv-python-headless>=4.10.0.84",
 ]
 
 [dependency-groups]
@@ -49,20 +49,17 @@ dev = [
     "pytest>=8.0.0",
     "pytest-asyncio>=0.23.0",
     "httpx>=0.28.0",
-    "pylance>=1.0.4",
+    "pyright>=1.1.390",
     "torch>=2.10.0",
     "transformers>=5.0.0",
     "git-filter-repo>=2.47.0",
 ]
 
 [tool.ruff]
-# 一行の最大文字数
 line-length = 100
 
 [tool.ruff.lint]
-# 有効にするルールセット（E: エラー, F: Pyflakes, I: isortなど）
 select = ["E", "F", "I"]
-# 無視するルール (E501: line too long - prompts can be long)
 ignore = ["E501"]
 
 [tool.pyright]
