--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ dependencies = [
     "google-cloud-storage>=3.8.0",
     "google-genai>=1.60.0",
     "httpx>=0.28.1",
-    "huggingface-hub>=1.3.5",
+    "huggingface-hub>=0.23.0",
     "jinja2>=3.1.6",
     "pdfplumber>=0.11.9",
     "pip>=25.3",
@@ -34,9 +34,10 @@ dependencies = [
     "tiktoken>=0.12.0",
     "uuid6>=2025.0.1",
     "uvicorn>=0.40.0",
-    "Pillow>=11.1.0",
+    "Pillow>=10.4.0",
     "camelot-py[cv]>=1.0.9",
     "opencv-python-headless>=4.13.0.90",
+    "typer>=0.21.1",
 ]
 
 
