--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,10 @@
   "dependencies": {
     "@types/uuid": "^11.0.0",
     "firebase": "^12.8.0",
+    "i18next": "^25.8.0",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-http-backend": "^3.0.2",
+    "react-i18next": "^16.5.4",
     "uuid": "^13.0.0"
   }
 }
