--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -113,4 +113,4 @@ tasks:
     desc: "Clear cache"
     cmds:
       - sqlite3 ocr_reader.db "DELETE FROM ocr_reader;"
-      - rm -rf src/static/paper_images?*
+      - rm -rf src/static/paper_images/*
