--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,8 @@ dependencies = [
     "typer>=0.21.1",
     "onnxruntime>=1.23.2",
     "opencv-python-headless>=4.13.0.90",
+    "alembic>=1.18.3",
+    "sqlalchemy>=2.0.46",
 ]
 
 
