--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,8 @@
   "description": "",
   "dependencies": {
     "@types/uuid": "^11.0.0",
+    "dexie": "^4.3.0",
+    "dexie-react-hooks": "^4.2.0",
     "firebase": "^12.8.0",
     "i18next": "^25.8.0",
     "i18next-browser-languagedetector": "^8.2.0",
