--- a/.env.example
+++ b/.env.example
@@ -36,11 +36,16 @@ LAYOUT_MODEL_PATH=models/layout_m.onnx
 LOCAL_MODEL_PATH=models/m2m100_ct2
 
 # =============================================================================
-# Redis (Optional - falls back to in-memory cache)
+# Redis Configuration
 # =============================================================================
+# Redis host (localhost for development, Memorystore IP for production)
 REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_DB=0
+
+# Redis connection timeout settings (for cloud environments)
+# REDIS_SOCKET_TIMEOUT=10
+# REDIS_SOCKET_CONNECT_TIMEOUT=10
 
 # =============================================================================
 # Storage Settings
