prapare processing optimization

--- a/.env.example
+++ b/.env.example
@@ -14,9 +14,19 @@ MODEL_TRANSLATE=gemini-1.5-flash
 MODEL_VISION=gemini-1.5-flash
 
 # =============================================================================
-# CPU / Thread Optimization (ONNX Runtime + CTranslate2)
+# ServiceB（推論サービス）連携設定
 # =============================================================================
-# For 8 vCPU Cloud Run configuration, recommended settings:
+# 推論サービスのURL（ServiceB）
+INFERENCE_SERVICE_URL=https://inference-service-xxx.run.app
+# 推論サービスのタイムアウト（秒）
+INFERENCE_SERVICE_TIMEOUT=30
+# 推論サービスのリトライ回数
+INFERENCE_SERVICE_RETRIES=3
+
+# =============================================================================
+# CPU / Thread Optimization (ONNX Runtime + CTranslate2) - ServiceB用
+# =============================================================================
+# 注意: これらの設定はServiceBで使用されます。ServiceAでは不要です。
 
 # ONNX Runtime threads for Paddle-layout-m (Layout Detection)
 ORT_INTRA_THREADS=4
@@ -27,8 +37,10 @@ CT2_INTER_THREADS=1
 CT2_INTRA_THREADS=4
 
 # =============================================================================
-# Model Paths
+# Model Paths - ServiceB用
 # =============================================================================
+# 注意: これらの設定はServiceBで使用されます。ServiceAでは不要です。
+
 # Path to ONNX layout detection model
 LAYOUT_MODEL_PATH=models/layout_m.onnx
 
