--- a/inference-service/.env.example
+++ b/inference-service/.env.example
@@ -3,6 +3,9 @@
 # ポート設定
 PORT=8080
 
+# ログレベル設定
+LOG_LEVEL=INFO
+
 # ONNX Runtime設定
 ORT_INTRA_THREADS=4
 ORT_INTER_THREADS=2
@@ -14,6 +17,3 @@ CT2_INTRA_THREADS=4
 # モデルパス
 LAYOUT_MODEL_PATH=models/layout_m.onnx
 LOCAL_MODEL_PATH=models/m2m100_ct2
-
-# ログレベル
-LOG_LEVEL=INFO
