--- a/inference-service/cloudbuild.yaml
+++ b/inference-service/cloudbuild.yaml
@@ -31,9 +31,10 @@ steps:
       '--min-instances', '1',
       '--max-instances', '10',
       '--concurrency', '10',
-      '--cpu-throttling',
-      '--set-env-vars', 'ORT_INTRA_THREADS=4,ORT_INTER_THREADS=2,CT2_INTER_THREADS=1,CT2_INTRA_THREADS=4',
-      '--timeout', '300'
+      '--no-cpu-throttling',
+      '--set-env-vars', 'ORT_INTRA_THREADS=4,ORT_INTER_THREADS=2,CT2_INTER_THREADS=1,CT2_INTRA_THREADS=4,LOG_LEVEL=INFO',
+      '--timeout', '300',
+      '--execution-environment', 'gen2'
     ]
 
 # ビルド設定
