--- a/inference-service/Dockerfile
+++ b/inference-service/Dockerfile
@@ -6,12 +6,13 @@ WORKDIR /app
 
 # システムパッケージのインストール
 RUN apt-get update && apt-get install -y \
-    libgl1-mesa-glx \
+    libgl1-mesa-dev \
     libglib2.0-0 \
     libsm6 \
     libxext6 \
     libxrender-dev \
     libgomp1 \
+    libgcc-s1 \
     && rm -rf /var/lib/apt/lists/*
 
 # Python依存関係のインストール
