--- a/inference-service/cloudbuild.yaml
+++ b/inference-service/cloudbuild.yaml
@@ -26,12 +26,12 @@ steps:
       '--region', 'asia-northeast1',
       '--platform', 'managed',
       '--allow-unauthenticated',
-      '--memory', '8Gi',
+      '--memory', '4Gi',
       '--cpu', '4',
       '--min-instances', '1',
       '--max-instances', '10',
       '--concurrency', '10',
-      '--no-cpu-throttling',
+      '--cpu-always-allocated',
       '--set-env-vars', 'ORT_INTRA_THREADS=4,ORT_INTER_THREADS=2,CT2_INTER_THREADS=1,CT2_INTRA_THREADS=4,LOG_LEVEL=INFO',
       '--timeout', '300',
       '--execution-environment', 'gen2'
