--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,8 +1,8 @@
 [project]
-name = "paperterrace"
+name = "paperterrace-backend"
 version = "0.1.0"
-description = "Research paper analysis and furigana tool"
-readme = "README.md"
+description = "PaperTerrace Backend Service - Main API and business logic"
+readme = "../README.md"
 requires-python = ">=3.12"
 dependencies = [
     "beautifulsoup4>=4.14.3",
@@ -11,27 +11,23 @@ dependencies = [
     "dotenv>=0.9.9",
     "email-validator>=2.3.0",
     "en-core-web-sm",
-    "fastapi>=0.128.0",
+    "email-validator>=2.3.0",
+    "en-core-web-sm",
     "firebase-admin>=6.0.0",
     "genai>=1.0.3",
     "go-task-bin>=3.48.0",
     "google-cloud-aiplatform>=1.135.0",
     "google-cloud-storage>=3.8.0",
     "google-genai>=1.60.0",
-    "httpx>=0.28.1",
     "huggingface-hub>=0.23.0",
     "jinja2>=3.1.6",
-    "pdfplumber>=0.11.9",
-    "pip>=25.3",
     "psycopg2-binary>=2.9.11",
-    "pydantic>=2.12.5",
+    "pip>=25.3",
     "structlog>=24.1.0",
-    "python-multipart>=0.0.21",
     "redis>=7.1.0",
     "spacy>=3.8.11",
     "tiktoken>=0.12.0",
     "uuid6>=2025.0.1",
-    "uvicorn>=0.40.0",
     "Pillow>=10.4.0",
     "typer>=0.21.1",
     "alembic>=1.18.3",
@@ -43,25 +39,14 @@ dependencies = [
 [dependency-groups]
 dev = [
     "ty>=0.0.13",
-    "ruff>=0.14.14",
+    "ty>=0.0.13",
     "unidic-lite>=1.0.8",
-    "pytest>=8.0.0",
-    "pytest-asyncio>=0.23.0",
-    "httpx>=0.28.0",
+    "unidic-lite>=1.0.8",
     "pyright>=1.1.390",
-    "torch>=2.10.0",
-    "transformers>=5.0.0",
     "git-filter-repo>=2.47.0",
-    "ctranslate2>=4.6.0",
-    "sentencepiece>=0.2.0",
 ]
 
-[tool.ruff]
-line-length = 100
 
-[tool.ruff.lint]
-select = ["E", "F", "I"]
-ignore = ["E501"]
 
 [tool.pyright]
 venvPath = "."
