--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -168,7 +168,7 @@ tasks:
           --min-instances 0 \
           --max-instances 10 \
           --timeout 300 \
-          --set-env-vars "GEMINI_API_KEY=${GEMINI_API_KEY},AI_PROVIDER=gemini,OCR_MODEL=gemini-1.5-flash"
+          --set-env-vars "GEMINI_API_KEY=${GEMINI_API_KEY},AI_PROVIDER=gemini,OCR_MODEL=gemini-1.5-flash,LOG_LEVEL=INFO,ACCESS_LOG_LEVEL=INFO"
       - echo "✅ Staging deployed!"
 
   staging:deploy:microservices:
@@ -302,7 +302,37 @@ tasks:
     desc: "Show staging logs"
     cmds:
       - echo "📋 Staging logs (last 50 entries):"
-      - gcloud run services logs read paperterrace-main-staging --limit=50 --region {{.REGION}} 2>/dev/null || echo "No ServiceA logs found"
+      - gcloud run services logs read paperterrace-staging --limit=50 --region {{.REGION}} --format=json 2>/dev/null | python3 -c "import sys, json; [print(json.dumps(json.loads(line), ensure_ascii=False, indent=2)) for line in sys.stdin if line.strip()]"
+
+  staging:logs:servicea:
+    desc: "Show ServiceA (main) logs with details"
+    cmds:
+      - echo "📋 ServiceA logs (last 50 entries):"
+      - gcloud logging read 'resource.type="cloud_run_revision" AND resource.labels.service_name="paperterrace-staging"' --limit=50 --format=json --region={{.REGION}} 2>/dev/null | python3 -c "import sys, json; [print(json.dumps(json.loads(line), ensure_ascii=False, indent=2)) for line in sys.stdin if line.strip()]"
+
+  staging:logs:serviceb:
+    desc: "Show ServiceB (inference) logs with details"
+    cmds:
+      - echo "📋 ServiceB logs (last 50 entries):"
+      - gcloud logging read 'resource.type="cloud_run_revision" AND resource.labels.service_name="paperterrace-inference-staging"' --limit=50 --format=json --region={{.REGION}} 2>/dev/null | python3 -c "import sys, json; [print(json.dumps(json.loads(line), ensure_ascii=False, indent=2)) for line in sys.stdin if line.strip()]"
+
+  staging:logs:tail:servicea:
+    desc: "Tail ServiceA logs in real-time"
+    cmds:
+      - echo "📋 Tailing ServiceA logs (Ctrl+C to stop)..."
+      - gcloud logging tail 'resource.type="cloud_run_revision" AND resource.labels.service_name="paperterrace-staging"' --format=json --region={{.REGION}}
+
+  staging:logs:tail:serviceb:
+    desc: "Tail ServiceB logs in real-time"
+    cmds:
+      - echo "📋 Tailing ServiceB logs (Ctrl+C to stop)..."
+      - gcloud logging tail 'resource.type="cloud_run_revision" AND resource.labels.service_name="paperterrace-inference-staging"' --format=json --region={{.REGION}}
+
+  staging:logs:errors:
+    desc: "Show only error logs from staging"
+    cmds:
+      - echo "🔴 Error logs from staging:"
+      - gcloud logging read 'resource.type="cloud_run_revision" AND (resource.labels.service_name="paperterrace-staging" OR resource.labels.service_name="paperterrace-inference-staging") AND severity>=ERROR' --limit=20 --format=json --region={{.REGION}} 2>/dev/null | python3 -c "import sys, json; [print(json.dumps(json.loads(line), ensure_ascii=False, indent=2)) for line in sys.stdin if line.strip()]"
 
   staging:urls:
     desc: "Show staging service URLs"
