--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = "PaperTerrace Backend Service - Main API and business logic"
 readme = "../README.md"
 requires-python = ">=3.12"
+# Cache buster: 2026-02-06-1
 dependencies = [
     # Web Framework
     "fastapi>=0.128.0",
