--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -152,7 +152,7 @@ tasks:
   # Staging Environment Tasks
   # ============================================================================
 
-  staging:deploy:
+  staging:deploy:servicea:
     desc: "Deploy backend to staging environment"
     cmds:
       - echo "🚀 Deploying backend to staging..."
@@ -162,7 +162,7 @@ tasks:
       - |
         SERVICEB_URL=$(gcloud run services describe paperterrace-inference-staging --region {{.REGION}} --format="value(status.url)" 2>/dev/null || echo "")
         if [ -z "$SERVICEB_URL" ]; then
-          echo "⚠️ ServiceB not found. Deploy inference service first with: task staging:inference:deploy"
+          echo "⚠️ ServiceB not found. Deploy inference service first with: task staging:deploy:serviceb"
           SERVICEB_URL="https://paperterrace-inference-staging-placeholder.run.app"
         fi
 
@@ -180,7 +180,7 @@ tasks:
       - echo "✅ Backend deployed to staging!"
       - task: staging:urls
 
-  staging:inference:deploy:
+  staging:deploy:serviceb:
     desc: "Deploy inference service to staging"
     cmds:
       - echo "🔨 Building and deploying inference service..."
@@ -198,18 +198,18 @@ tasks:
           --max-instances 10 \
           --concurrency 10 \
           --timeout 300 \
-          --set-env-vars "LOG_LEVEL=INFO,DEV_MODE=false,SKIP_MODEL_LOADING=false,LOCAL_MODEL_PATH=/app/models/m2m100_ct2"
+          --set-env-vars "LOG_LEVEL=INFO,DEV_MODE=false,SKIP_MODEL_LOADING=false,LOCAL_MODEL_PATH=/app/models/m2m100_ct2,TRANSLATION_BEAM_SIZE=5,TRANSLATION_REPETITION_PENALTY=1.4,TRANSLATION_NO_REPEAT_NGRAM_SIZE=3"
       - echo "✅ Inference service deployed to staging!"
       - task: staging:urls
 
-  staging:deploy:all:
+  staging:deploy:
     desc: "Deploy both backend and inference to staging"
     cmds:
       - echo "🚀 Deploying all services to staging..."
-      - task: staging:inference:deploy
+      - task: staging:deploy:serviceb
       - echo "⏳ Waiting 10 seconds for inference service to be ready..."
       - sleep 10
-      - task: staging:deploy
+      - task: staging:deploy:servicea
       - echo "🎉 All services deployed to staging!"
 
   staging:test:
@@ -227,7 +227,7 @@ tasks:
       - |
         SERVICEB_URL=$(gcloud run services describe paperterrace-inference-staging --region {{.REGION}} --format="value(status.url)" 2>/dev/null)
         if [ -z "$SERVICEB_URL" ]; then
-          echo "❌ Inference service not found. Deploy first with: task staging:inference:deploy"
+          echo "❌ Inference service not found. Deploy first with: task staging:deploy:serviceb"
           exit 1
         fi
 
@@ -235,7 +235,7 @@ tasks:
 
         RESPONSE=$(curl -s -X POST "$SERVICEB_URL/api/v1/translate" \
           -H "Content-Type: application/json" \
-          -d '{"text": "Hello world", "source_lang": "en", "target_lang": "ja"}' \
+          -d '{"text": "Hello world",  "target_lang": "ja"}' \
           -w "\n%{http_code}")
 
         HTTP_CODE=$(echo "$RESPONSE" | tail -n1)
@@ -337,40 +337,46 @@ tasks:
         fi
 
   staging:logs:
-    desc: "Show staging logs"
+    desc: "Show combined staging logs"
     cmds:
-      - echo "📋 Staging logs (last 50 entries):"
-      - gcloud run services logs read paperterrace-staging --limit=50 --region {{.REGION}} --format=json 2>/dev/null | python3 scripts/format_logs.py
+      - echo "📋 Staging combined logs (last 50 entries):"
+      - gcloud run services logs read paperterrace-staging --limit=50 --region {{.REGION}} --format="table(receiveTimestamp.date(tz='Asia/Tokyo'):label=TIME, severity, textPayload, jsonPayload.event:label=MESSAGE)"
 
   staging:logs:servicea:
-    desc: "Show backend logs"
+    desc: "Show backend logs (Service A)"
     cmds:
       - echo "📋 Backend logs (last 50 entries):"
-      - gcloud logging read 'resource.type="cloud_run_revision" AND resource.labels.service_name="paperterrace-staging"' --limit=50 --format=json 2>/dev/null | python3 scripts/format_logs.py
+      - gcloud logging read 'resource.type="cloud_run_revision" AND resource.labels.service_name="paperterrace-staging"' --limit=50 --format="table(timestamp.date(tz='Asia/Tokyo'):label=TIME, severity, textPayload, jsonPayload.event:label=MESSAGE)"
 
   staging:logs:serviceb:
-    desc: "Show inference service logs"
+    desc: "Show inference service logs (Service B)"
     cmds:
       - echo "📋 Inference service logs (last 50 entries):"
-      - gcloud logging read 'resource.type="cloud_run_revision" AND resource.labels.service_name="paperterrace-inference-staging"' --limit=50 --format=json 2>/dev/null | python3 scripts/format_logs.py
+      - gcloud logging read 'resource.type="cloud_run_revision" AND resource.labels.service_name="paperterrace-inference-staging"' --limit=50 --format="table(timestamp.date(tz='Asia/Tokyo'):label=TIME, severity, textPayload, jsonPayload.event:label=MESSAGE)"
 
   staging:logs:tail:servicea:
     desc: "Tail backend logs in real-time"
     cmds:
       - echo "📋 Tailing backend logs (Ctrl+C to stop)..."
-      - gcloud logging tail 'resource.type="cloud_run_revision" AND resource.labels.service_name="paperterrace-staging"' --format="table(timestamp,severity,textPayload)"
+      - gcloud logging tail 'resource.type="cloud_run_revision" AND resource.labels.service_name="paperterrace-staging"' --format="table(timestamp.date(tz='Asia/Tokyo'):label=TIME, severity, textPayload, jsonPayload.event:label=MESSAGE)"
 
   staging:logs:tail:serviceb:
     desc: "Tail inference service logs in real-time"
     cmds:
       - echo "📋 Tailing inference service logs (Ctrl+C to stop)..."
-      - gcloud logging tail 'resource.type="cloud_run_revision" AND resource.labels.service_name="paperterrace-inference-staging"' --format="table(timestamp,severity,textPayload)"
+      - gcloud logging tail 'resource.type="cloud_run_revision" AND resource.labels.service_name="paperterrace-inference-staging"' --format="table(timestamp.date(tz='Asia/Tokyo'):label=TIME, severity, textPayload, jsonPayload.event:label=MESSAGE)"
 
   staging:logs:errors:
     desc: "Show only error logs from staging"
     cmds:
       - echo "🔴 Error logs from staging:"
-      - gcloud logging read 'resource.type="cloud_run_revision" AND (resource.labels.service_name="paperterrace-staging" OR resource.labels.service_name="paperterrace-inference-staging") AND severity>=ERROR' --limit=20 --format=json 2>/dev/null | python3 scripts/format_logs.py
+      - gcloud logging read 'resource.type="cloud_run_revision"\
+        AND (resource.labels.service_name="paperterrace-staging"\
+        OR resource.labels.service_name="paperterrace-inference-staging")\
+        AND severity>=ERROR' \
+        --limit=20 --format="table(timestamp.date(tz='Asia/Tokyo'):label=TIME, \
+        resource.labels.service_name:label=SERVICE, severity, textPayload, \
+        jsonPayload.event:label=MESSAGE)" --order=asc
 
   staging:urls:
     desc: "Show staging service URLs"
@@ -407,12 +413,14 @@ tasks:
   logs:prod:
     desc: "Show production logs"
     cmds:
-      - gcloud run services logs read paperterrace --limit=100 --region {{.REGION}}
+      - echo "📋 Production combined logs (last 100 entries):"
+      - gcloud run services logs read paperterrace --limit=100 --region {{.REGION}} --format="table(receiveTimestamp.date(tz='Asia/Tokyo'):label=TIME, severity, textPayload, jsonPayload.event:label=MESSAGE)"
 
   logs:prod:tail:
     desc: "Tail production logs"
     cmds:
-      - gcloud run services logs tail paperterrace --region {{.REGION}}
+      - echo "📋 Tailing production logs (Ctrl+C to stop)..."
+      - gcloud run services logs tail paperterrace --region {{.REGION}} --format="table(receiveTimestamp.date(tz='Asia/Tokyo'):label=TIME, severity, textPayload, jsonPayload.event:label=MESSAGE)"
 
   logs:errors:
     desc: "Show error logs"
