--- a/inference-service/pyproject.toml
+++ b/inference-service/pyproject.toml
@@ -11,14 +11,11 @@ dependencies = [
     # ML推論ライブラリ
     "ctranslate2>=4.4.0",
     "sentencepiece>=0.2.0",
-    "paddlepaddle>=2.6.0",
-    "paddle2onnx>=2.1.0",
     "onnxruntime>=1.23.2",
     "opencv-python-headless>=4.13.0.92",
     "onnx-graphsurgeon>=0.5.8",
     "slowapi>=0.1.9",
 
-    # Web Framework & Common (from root)
     "fastapi>=0.128.0",
     "uvicorn[standard]>=0.32.1",
     "pydantic>=2.10.4",
@@ -28,9 +25,7 @@ dependencies = [
     "Pillow>=11.0.0",
     "structlog>=24.1.0",
     "chardet>=5.2.0",
-    "datetime>=6.0",
-    "dotenv>=0.9.9",
-    "pip>=25.3",
+    "python-dotenv>=1.0.1",
 ]
 
 [dependency-groups]
